fixed logo svg problem on mobile

--- a/client/styles/config.scss
+++ b/client/styles/config.scss
@@ -49,15 +49,7 @@
 #loading-bar .bar{
   background: #2B228A !important;
   position: absolute !important;
-  padding: 0 !important;
-}
-
-#loading-bar-spinner {
-  color: #2B228A !important;
-  position: absolute !important;
-  left: auto !important;
-  right: 15px !important;
-  top: 18px !important;
+  padding: 2px !important;
 }
 
 #loading-bar .peg {
