--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -2,7 +2,8 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  color: red;
+  color: white;
+  opacity: .8;
   text-align: center;
   font-size: 25px;
   cursor: pointer;
@@ -30,4 +31,16 @@
   z-index: 10;
   width: 100%;
   height: 100%;
+}
+
+.bar-stable {
+  background-color: rgb(40,53,147) !important;
+}
+
+.bar-stable .button {
+  color: white !important;
+}
+
+.bar.bar-stable .title {
+  color: white !important;
 }
